namespace OnlineCheckIn.Domain.Models;

public class Invoice : BaseModel
{
    public Guid Id { get; set; }
}