namespace OnlineCheckIn.Domain.Models;

public class Payment : BaseModel
{
    public Guid Id { get; set; }
}